--- a/serverless.yml
+++ b/serverless.yml
@@ -6,11 +6,7 @@ provider:
   profile: personal
 
 functions:
-  hello:
-    handler: service/handler.hello
-
+  convert:
+    handler: convert/handler.handler
     events:
-      - http:
-          path: users/create
-          method: get
-
+      - s3: photos
