--- a/serverless.yml
+++ b/serverless.yml
@@ -4,11 +4,31 @@ provider:
   name: aws
   runtime: nodejs6.10
   profile: personal
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - s3:*
+      Resource: "*"
 
 functions:
   convert:
     environment:
-      BUCKET_NAME: uploads
+      BUCKET_NAME: chkspk-uploads
     handler: convert/handler.handler
     events:
-      - s3: uploads
+      - http:
+          path: users/upload
+          method: post
+
+resources:
+  Resources:
+    S3Assets:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: chkspk-uploads
+        CorsConfiguration:
+          CorsRules:
+            - AllowedMethods:
+                - GET
+              AllowedOrigins:
+                - "*"
